--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ cscope*
 *.suo
 .DS_Store
 *~
+*.bak
 
 /build/
 /certs/
@@ -18,6 +19,7 @@ cscope*
 /ChainDB.config
 /Log/
 /vendor/
+/test/
 
 /nknd
 /nknc
